syntax = "proto3";

package proto.user;

service UserService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc isExists (isExistsRequest) returns (isExistsResponse);
}

message SignUpRequest {
  string uuid = 1;
  string nickName = 2;
  string password = 3;
}

message SignUpResponse {
  string uuid = 1;
  string nickName = 2;
}

message SignInRequest {
  string password = 1;
}

message SignInResponse {
  bool isLogin = 1;
  string nickName = 2;
}

message isExistsRequest {
  string uuid = 1;
}

message isExistsResponse {
  bool exists = 1;
}